--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,9 @@
                     </li>
                     {% endif %}
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
+                <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}<br/>
+                Copyright &copy; <a href="/admin/nurfaqihimam">Nur Faqih Imam Networks</a> {{ site.time | date: '%
+                </p>
             </div>
         </div>
     </div>
