--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,8 +54,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}<br/>
-                Copyright &copy; <a href="/admin/nurfaqihimam">Nur Faqih Imam Networks</a> {{ site.time | date: '%
-                </p>
+                Copyright &copy; <a href="/admin/nurfaqihimam">Nur Faqih Imam Networks</a> {{ site.time | date: '%Y' }}</p>
             </div>
         </div>
     </div>
