--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
                     {% if page.subtitle %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% endif %}
-                    <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+                    <span class="meta">Diposkan oleh {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} pada {{ page.date | date: "%B %-d, %Y" }}</span>
                 </div>
             </div>
         </div>
@@ -26,9 +26,10 @@ layout: default
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 				{{ content }}
-			
+		<br/>
+		<span><script id="dsq-count-scr" src="//isyanationblog.disqus.com/count.js" async></script></span> 
 		<div id="comments" class="disqus">
-			<h2 id="comment-count" class="discuss"><script id="dsq-count-scr" src="//isyanationblog.disqus.com/count.js" async></script> Komentar</h2>
+			<h2 id="comment-count" class="discuss">Komentar</h2>
 			<div id="disqus_thread"></div>
 <script>
 
