--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
                     {% if page.subtitle %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% endif %}
-                    <span class="meta">Diposkan oleh {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} pada {{ page.date | date: "%B %-d, %Y" }}</span>
+                    <span class="meta">Diposkan oleh {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} pada {{ page.date | date: "%B %-d, %Y" }}. <a href="#disqus_thread"></a></span>
                 </div>
             </div>
         </div>
