--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
          }
 
          #searchButton {
-           paddign: 0.3em 0.6em;
+           padding: 0.3em 0.6em;
            background-color: #0B5485;
            border: 1px solid #f6f5ea;
            margin-left: 0;
